--- a/.classpath
+++ b/.classpath
@@ -21,5 +21,6 @@
 	<classpathentry kind="lib" path="lib/spring-2.5.6.SEC03.jar"/>
 	<classpathentry kind="lib" path="lib/tomcat-jni-9.0.0.M11.jar"/>
 	<classpathentry kind="lib" path="lib/xbean-spring-4.5.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-nop-1.7.21.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
